# internal/modules/HR/adminModel.go
@@ -7,18 +7,17 @@ import (
 )
 
 type CreateHrAdminReqModel struct {
-	UserName  string        `json:"user_name"`
-	Email     string        `json:"email"`
-	Password  string        `json:"password"`
-	Role      string        `json:"role"`
-	Status    string        `json:"status"`
-	BranchID  int64         `json:"branch_id"`
-	CreatedBy *int64        `json:"created_by"`
-	UpdatedBy *int64        `json:"updated_by"`
+	UserName  string `json:"user_name"`
+	Email     string `json:"email"`
+	Password  string `json:"password"`
+	Role      string `json:"role"`
+	Status    string `json:"status"`
+	BranchID  int64  `json:"branch_id"`
+	CreatedBy *int64 `json:"created_by"`
+	UpdatedBy *int64 `json:"updated_by"`
 }
 
 func (A *CreateHrAdminReqModel) convertToDbStruct() (db.CreateHrAdminParams, error) {
-
 	var created_by sql.NullInt64
 	if A.CreatedBy != nil {
 		created_by.Int64 = *A.CreatedBy
@@ -40,6 +39,11 @@ func (A *CreateHrAdminReqModel) convertToDbStruct() (db.CreateHrAdminParams, err
 		BranchID:  A.BranchID,
 		CreatedBy: created_by,
 		UpdatedBy: updated_by,
-	},nil
+	}, nil
 }
 
+type GetAdminReqModel struct {
+	Search     string `json:"search"`
+	Limit      int32  `json:"limit"`
+	PageNumber int32  `json:"page"`
+}
